grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/sum_of_positive_2replace.py", line 1
    list = [ - 1 , 0 @@@ 1 , 2 , 3 , - 2 ] n+ sum = 0 n+ for i in list : n+ if i > 0 : n+ sum = sum @@@ i n+ print ( sum ) n+ 
                      ^
SyntaxError: invalid syntax
